--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,18 @@
 <header class="header">
-  <div class="container">
-    <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="container nav">
+    <a href="/" class="logo">
+      <span class="logo__accent">Link</span>-Tor
+    </a>
+    <ul class="nav__menu">
+      <li><a href="#hero" class="nav__link">Главная</a></li>
+      <li><a href="#platform" class="nav__link">О платформе</a></li>
+      <li><a href="#benefits" class="nav__link">Преимущества</a></li>
+      <li><a href="#innovations" class="nav__link">Инновации</a></li>
+      <li><a href="#education" class="nav__link">Обучение</a></li>
+    </ul>
+    <a href="#contact" class="btn btn--primary nav__btn">Связаться</a>
+    <button class="burger" aria-label="Menu">
+      <span></span>
+    </button>
+  </nav>
 </header>
