--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -135,7 +135,7 @@
                             <a href="#contact" class="btn btn--primary">Запросить доступ</a>
                         </div>
                         <div class="tabs__pane-visual">
-                            <img src="img/placeholder.png" alt="AI Technology">
+                            <img src="/img/two.jpg" alt="AI Technology">
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                             <a href="#contact" class="btn btn--primary">Начать сейчас</a>
                         </div>
                         <div class="tabs__pane-visual">
-                            <img src="img/placeholder.png" alt="Web3">
+                            <img src="/img/three.jpg" alt="Web3">
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                             <a href="#contact" class="btn btn--primary">Узнать детали</a>
                         </div>
                         <div class="tabs__pane-visual">
-                            <img src="img/placeholder.png" alt="Automation">
+                            <img src="/img/four.jpg" alt="Automation">
                         </div>
                     </div>
                 </div>
