--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -192,7 +192,7 @@
         <div class="education__grid">
             <article class="edu-card">
                 <div class="edu-card__image">
-                    <img src="img/placeholder.png" alt="Основы инноваций">
+                    <img src="/img/five.jpg" alt="Основы инноваций">
                     <span class="edu-card__tag">Старт</span>
                 </div>
                 <div class="edu-card__content">
@@ -201,7 +201,7 @@
                         Англии и ЕС в 2026 году.</p>
                     <div class="edu-card__footer">
                         <span class="edu-card__time"><i data-lucide="clock"></i> 15 мин</span>
-                        <a href="#" class="edu-card__link">Получить больше информации <i
+                        <a href="#contact" class="edu-card__link">Получить больше информации <i
                                 data-lucide="arrow-right"></i></a>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
 
             <article class="edu-card">
                 <div class="edu-card__image">
-                    <img src="img/placeholder.png" alt="AI Практики">
+                    <img src="/img/six.jpg" alt="AI Практики">
                     <span class="edu-card__tag">PRO</span>
                 </div>
                 <div class="edu-card__content">
@@ -218,14 +218,14 @@
                         пассивного дохода.</p>
                     <div class="edu-card__footer">
                         <span class="edu-card__time"><i data-lucide="clock"></i> 45 мин</span>
-                        <a href="#" class="edu-card__link">Узнать детали <i data-lucide="arrow-right"></i></a>
+                        <a href="#contact" class="edu-card__link">Узнать детали <i data-lucide="arrow-right"></i></a>
                     </div>
                 </div>
             </article>
 
             <article class="edu-card">
                 <div class="edu-card__image">
-                    <img src="img/placeholder.png" alt="Будущее">
+                    <img src="/img/seven.jpg" alt="Будущее">
                     <span class="edu-card__tag">Аналитика</span>
                 </div>
                 <div class="edu-card__content">
@@ -234,7 +234,7 @@
                         на базе инноваций.</p>
                     <div class="edu-card__footer">
                         <span class="edu-card__time"><i data-lucide="clock"></i> 30 мин</span>
-                        <a href="#" class="edu-card__link">Запросить доступ <i data-lucide="arrow-right"></i></a>
+                        <a href="#contact" class="edu-card__link">Запросить доступ <i data-lucide="arrow-right"></i></a>
                     </div>
                 </div>
             </article>
