--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -302,11 +302,11 @@
 
                     <button type="submit" class="btn btn--primary btn--full">Запросить доступ</button>
 
-                    <div id="form-success" class="form-status success">
+
+                </form>                    <div id="form-success" class="form-status success">
                         <i data-lucide="check-circle"></i>
                         Заявка отправлена! Мы свяжемся с вами в ближайшее время.
                     </div>
-                </form>
             </div>
         </div>
     </div>
