--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <header class="header">
   <nav class="container nav">
-    <a href="/" class="logo">
+    <a href="./#hero" class="logo">
       <span class="logo__accent">Link</span>-Tor
     </a>
     <ul class="nav__menu">
-      <li><a href="#hero" class="nav__link">Главная</a></li>
-      <li><a href="#platform" class="nav__link">О платформе</a></li>
-      <li><a href="#benefits" class="nav__link">Преимущества</a></li>
-      <li><a href="#innovations" class="nav__link">Инновации</a></li>
-      <li><a href="#education" class="nav__link">Обучение</a></li>
+      <li><a href="./#hero" class="nav__link">Главная</a></li>
+      <li><a href="./#platform" class="nav__link">О платформе</a></li>
+      <li><a href="./#benefits" class="nav__link">Преимущества</a></li>
+      <li><a href="./#innovations" class="nav__link">Инновации</a></li>
+      <li><a href="./#education" class="nav__link">Обучение</a></li>
     </ul>
-    <a href="#contact" class="btn btn--primary nav__btn">Связаться</a>
+    <a href="./#contact" class="btn btn--primary nav__btn">Связаться</a>
     <button class="burger" aria-label="Menu">
       <span></span>
     </button>
