--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,7 +6,7 @@
   </div>
   <div class="container footer__grid">
     <div class="footer__col">
-      <a href="/" class="logo footer__logo">
+      <a href="./#hero" class="logo footer__logo">
         <span class="logo__accent">Link</span>-Tor
       </a>
       <p class="footer__text">Технологии нового поколения для вашего роста. Переосмыслите подход к развитию вместе с
@@ -16,23 +16,24 @@
     <div class="footer__col">
       <h4 class="footer__title">Меню</h4>
       <ul class="footer__links">
-        <li><a href="#hero">Главная</a></li>
-        <li><a href="#platform">О платформе</a></li>
-        <li><a href="#benefits">Преимущества</a></li>
-        <li><a href="#innovations">Инновации</a></li>
+        <li><a href="./#hero">Главная</a></li>
+        <li><a href="./#platform">О платформе</a></li>
+        <li><a href="./#benefits">Преимущества</a></li>
+        <li><a href="./#innovations">Инновации</a></li>
       </ul>
     </div>
 
     <div class="footer__col">
       <h4 class="footer__title">Документы</h4>
-      <ul class="footer__links">
-        <li><a href="privacy.html">Privacy Policy</a></li>
-        <li><a href="cookies.html">Cookie Policy</a></li>
-        <li><a href="terms.html">Terms of Use</a></li>
-        <li><a href="return.html">Return Policy</a></li>
-        <li><a href="disclaimer.html">Disclaimer</a></li>
-        <li><a href="personal-data-policy.html">Data Policy</a></li>
-      </ul>
+<ul class="footer__links">
+  <li><a href="./privacy.html">Privacy Policy</a></li>
+  <li><a href="./cookies.html">Cookie Policy</a></li>
+  <li><a href="./terms.html">Terms of Use</a></li>
+  <li><a href="./return.html">Return Policy</a></li>
+  <li><a href="./disclaimer.html">Disclaimer</a></li>
+  <li><a href="./personal-data-policy.html">Data Policy</a></li>
+  <li><a href="./contact.html">Contact Us</a></li>
+</ul>
     </div>
 
     <div class="footer__col">
